syntax = "proto3";
package protobufs;

message Journal {
    int64 id = 1;
    int64 user_id = 2;
    enum JournalSaveType {
        LOCAL = 0;
        PLAINTEXT = 1;
        ENCRYPTED = 2;
    }
    JournalSaveType save_type = 3;
    string content = 4;
	int64 created_at = 5;
    int64 updated_at = 6;
    string uuid = 7;
};

message JournalResponse {
    int64 total = 1;
    int64 size = 2;
    repeated Journal journals = 3;
}